WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
296122
REGRESSION(
291932@main
)): App may crash when a page calls ApplePaySetup.begin()
https://bugs.webkit.org/show_bug.cgi?id=296122
Summary
REGRESSION(291932@main)): App may crash when a page calls ApplePaySetup.begin()
Abrar Rahman Protyasha
Reported
2025-07-17 03:27:07 PDT
rdar://155350256
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2025-07-17 03:31:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/48182
Abrar Rahman Protyasha
Comment 2
2025-07-19 17:36:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/48296
EWS
Comment 3
2025-07-21 09:44:33 PDT
Committed
297686@main
(5e6dcc23b308): <
https://commits.webkit.org/297686@main
> Reviewed commits have been landed. Closing PR #48296 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug