REGRESSION(291932@main): App may crash when a page calls ApplePaySetup.begin() https://bugs.webkit.org/show_bug.cgi?id=296122 rdar://155350256

Reviewed by NOBODY (OOPS!).

We added a wrong (or, at least, too strict) process assertion in
291932@main. BeginApplePaySetup is a UI (or Networking) process bound
IPC message and hence CoreIPCPKPaymentSetupFeature::toID() will
naturally be called by a non-web-process receiver.

This patch removes said assertion.

* Source/WebKit/Shared/Cocoa/CoreIPCPKPaymentSetupFeature.mm:
(WebKit::CoreIPCPKPaymentSetupFeature::toID const):