Source/WebKit/Shared/Cocoa/CoreIPCPKPaymentSetupFeature.mm
@@ -41,7 +41,6 @@ CoreIPCPKPaymentSetupFeature::CoreIPCPKPaymentSetupFeature(PKPaymentSetupFeature
 RetainPtr<id> CoreIPCPKPaymentSetupFeature::toID() const
 {
     RetainPtr data = toNSDataNoCopy(m_data.span(), FreeWhenDone::No);
-    RELEASE_ASSERT(isInWebProcess());
     return [NSKeyedUnarchiver unarchivedObjectOfClass:PAL::getPKPaymentSetupFeatureClass() fromData:data.get() error:nil];
 }
 
